# donation-transparency

./: .gitignore  Cargo.toml  README.md
docs/: donation.erd  donation.sql
resources/: Excluded.csv  Parties.csv  Parties.json  donation.sql
src/: helpers.rs  lib.rs  models.rs  queries.rs  statistics.rs
src/entities/: branch.rs  donar.rs  donation.rs  donor.rs  industry.rs  mod.rs  party.rs  prelude.rs
tests/: query_tests.rs  test_queries.rs
