[package]
name = "donation_transparency"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
log = { version = "0.4" }

[build-dependencies]
sqlx-cli = { version = "0.8" }
