[package]
name = "donation-transparency"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
sqlx = { version = "*", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "*", features = ["full"] }
serde = { version = "*", features = ["derive"] }
dotenv = { version = "*" }
log = { version = "*" }
sea-orm = { version = "*", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
] }
futures = { version = "*" }
csv = { version = "*" }
tracing-subscriber = { version = "*" }
tracing = { version = "*" }

[build-dependencies]
sqlx-cli = { version = "*" }
