[package]
name = "donation-transparency"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
serde = { version = "*", features = ["derive"] }
dotenv = { version = "*" }
log = { version = "*" }
sea-orm = { version = "*", features = [
    "sqlx-postgres",
    "runtime-async-std-native-tls",
    "macros",
] }
csv = { version = "*" }
async-std = { version = "*", features = ["attributes"] }
toml = { version = "*" }

[dev-dependencies]
sqlx-cli = { version = "*" }
tokio = { version = "*", features = ["full"] }
